--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activityCompose = "1.9.2"
-agp = "8.6.0-alpha07"
+agp = "8.7.0-rc01"
 coilCompose = "2.6.0"
 composeBom = "2024.09.02"
 coreKtx = "1.13.1"
